--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/postcss": "^4.1.11",
     "axios": "^1.11.0",
     "classnames": "^2.5.1",
+    "daisyui": "^5.0.50",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
